--- a/bone_cancer.ipynb
+++ b/bone_cancer.ipynb
@@ -1179,6 +1179,29 @@
    "source": [
     "eda['GSM921516'].corr(data['GSM921517'])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Development"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Simple and Multiple Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
